fix: move cover image overlay z-index behind scrollbar

--- a/src/editor.scss
+++ b/src/editor.scss
@@ -26,7 +26,7 @@
 	inset: 0;
 	width: 100%;
 	height: 100%;
-	z-index: 10;
+	z-index: 9;
 }
 
 .editor-slide__cover-image {
